--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -34,8 +34,8 @@
                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
                 </li>
                 <li>
-                    </span><a href="mailto:info@example.com">Đà Nẵng, Việt Nam</a>
-                    <span class="glyphicon glyphicon-map-marker" aria-hidden="true">
+                    <a href="mailto:info@example.com">Đà Nẵng, Việt Nam</a>
+                    <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
                 </li>
             </ul>
         </div>
@@ -47,7 +47,7 @@
 <div class="ban-top">
     <div class="container">
         <div class="top_nav_left">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default navbar_HomePage">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -59,7 +59,7 @@
                         </button>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
+                    <div class="collapse navbar_menu_HomePage navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav menu__list">
                             <li class="active menu__item menu__item--current"><a class="menu__link" href="/Home/Index">Trang Chủ <span class="sr-only">(current)</span></a></li>
                             <li class="dropdown menu__item">
