--- a/OnlineStoreMVC/Views/Shared/_Layout.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <meta name="Description" content="Construction tools">
     <link rel="icon" type="image/ico" href="~/Content/Images/Banners/faviorIcon.jpg">
     
-    @Styles.Render("~/Content/bootstrap")
+    @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/webCss")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
