--- a/OnlineStoreMVC/Views/Shared/_GroupProductsPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_GroupProductsPartial.cshtml
@@ -12,7 +12,7 @@
             <b class="line"></b>
         </div>
     </div>
-    <div class=" con-w3l">
+    <div class=" con-w3l listProduct">
         @foreach (var item in @Model)
         {
             <div class="col-md-3 product-men" data-toggle="popover" title="@item.Name" data-content="@item.ShortDescription">
