--- a/OnlineStoreMVC/Content/display-product/homepage.css
+++ b/OnlineStoreMVC/Content/display-product/homepage.css
@@ -39,13 +39,13 @@
 
 .btn-next-groupproduct{
     margin-left:5px;
-    border:1px solid #ccc;
+    /*border:1px solid #ccc;*/
     border-radius:0;
 }
 
 .btn-previous-groupproduct{
     margin-left:5px;
-    border:1px solid #ccc;
+    /*border:1px solid #ccc;*/
     border-radius:0;
 }
 
