--- a/OnlineStoreMVC/Views/Shared/_FooterPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_FooterPartial.cshtml
@@ -63,9 +63,9 @@
 <div class="footer">
     <div class="container">
         <div class="col-md-3 footer-left">
-            <h2><a href="index.html"><img src="~/Content/Images/TestImages/logo3.jpg" alt=" " /></a></h2>
+            <h2><a href="/Home/Index"><img src="~/Content/Images/TestImages/logo3.jpg" alt=" " /></a></h2>
             <p>
-                Uy tín, tin cậy, cam kết đem lại cho những sản phẩm tốt nhất cho khách hàng
+                Uy tín, tin cậy, cam kết đem lại những sản phẩm tốt nhất cho khách hàng
             </p>
         </div>
         <div class="col-md-9 footer-right">
