--- a/OnlineStoreMVC/Views/Home/GroupProductPatial.cshtml
+++ b/OnlineStoreMVC/Views/Home/GroupProductPatial.cshtml
@@ -20,7 +20,7 @@
             {
                 <div class="product-men item" data-toggle="popover" title="@item.Name" data-content="@item.ShortDescription">
                     <div class="men-pro-item simpleCart_shelfItem">
-                        <div class="men-thumb-item">
+                        <a href="/Product/ProductDetails/@item.Id" class="men-thumb-item">
                             <img src="@item.CoverImageUrl" alt="" class="pro-image-front">
                             <img src="@item.CoverImageUrl" alt="" class="pro-image-back">
                             <div class="men-cart-pro">
@@ -32,7 +32,7 @@
                             {
                                 <span class="product-new-top">Mới</span>
                             }
-                        </div>
+                        </a>
                         <div class="item-info-product ">
                             <h4 style="height:60px;overflow:hidden;">@Html.ActionLink(item.Name, "ProductDetails", "Product", new { @id = item.Id }, null)</h4>
                             <div class="info-product-price">
