--- a/OnlineStoreMVC/Views/Home/Index.cshtml
+++ b/OnlineStoreMVC/Views/Home/Index.cshtml
@@ -16,12 +16,24 @@
 <script src="~/Scripts/webjs/simpleCart.min.js"></script>
 <script src="~/Scripts/webjs/pignose.layerslider.js"></script>
 <script src="~/Scripts/webjs/easyResponsiveTabs.js"></script>
-@*<script src="~/Content/plugins/sly/sly.min.js"></script>*@
 <script src="~/Content/plugins/owl-sliderbar/js/owl.carousel.min.js"></script>
 <script src="~/Scripts/DisplayProduct/HomePage.js"></script>
+    <script>
+
+        $(function () {
+            $(window).resize(function () {
+                var groupProductTitleWidth = $(".title-groupproduct").width();
+                var subCategoriesWidth = groupProductTitleWidth - $(".category-title-groupproduct").width() - 60 - 80 - 30;
+                $(".childrencategory-groupproduct").width(subCategoriesWidth);
+            });
+
+            $(window).trigger('resize');
+        });
+
+    </script>
 }
 
-<div ng-app="ecom_HomePage" ng-controller="ecom_Main_Controller">
+<div ng-app="ecom_HomePage">
     <!-- banner -->
     @*<div class="banner-grid">
         <div id="visual">
@@ -55,9 +67,9 @@
     <!-- //banner -->
     <!-- content -->
 
-    <div class="product-easy">
+    <div ng-controller="ecom_Main_Controller as ctrl" class="product-easy">
         <div class="container groupproduct-panel">
-            @Html.Action("GroupProductPatial", new {@categoryId =19})
+            @Html.Action("GroupProductPatial", new { @categoryId = 21 })
             @Html.Action("GroupProductPatial", new { @categoryId = 22 })
         </div>
     </div>
