--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -12,11 +12,11 @@
                     <input type="search" value="@Request.QueryString["searchString"]" placeholder="Tìm Kiếm" name="searchString">
                 </div>
                 <div class="section_room">
-                        @Html.DropDownList("searchType")
-                    
+                    @Html.DropDownList("searchType")
+
                 </div>
                 <div class="sear-sub">
-                    <input type="submit" value=" ">
+                    <input type="submit" value="">
                 </div>
                 <div class="clearfix"></div>
             </form>
@@ -59,34 +59,44 @@
                             <li class="dropdown menu__item">
                                 <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Danh Mục sản phẩm <span class="caret"></span></a>
                                 <ul class="dropdown-menu multi-column columns-3">
-                                    <div class="row">
-                                        @Html.Action("SubCategoriesPatial","Home")
-                                        <div class="clearfix"></div>
-                                    </div>
+                                    @Html.Action("SubCategoriesPatial", "Home")
                                 </ul>
                             </li>
-                            <li class=" menu__item">@Html.ActionLink("Liên Hệ", "Contact", "Home", new { @class = "menu__link" })</li>
+                            <li class="menu__item">@Html.ActionLink("Liên Hệ", "Contact", "Home", new { @class = "menu__link" })</li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
         @*<div class="top_nav_right">
-            <div class="cart box_1">
-                <a href="checkout.html">
-                    <h3>
-                        <div class="total">
-                            <i class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></i>
-                            <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
-                        </div>
+                <div class="cart box_1">
+                    <a href="checkout.html">
+                        <h3>
+                            <div class="total">
+                                <i class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></i>
+                                <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
+                            </div>
 
-                    </h3>
-                </a>
-                <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
+                        </h3>
+                    </a>
+                    <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
 
-            </div>
-        </div>*@
+                </div>
+            </div>*@
         <div class="clearfix"></div>
     </div>
 </div>
 <!-- //banner-top -->
+<div class="container">
+    <div class="row">
+        @{
+            var categoriesList = ViewBag.TopCategoriesList as IEnumerable<OnlineStore.Model.ViewModel.SummaryCategoryViewModel>;
+            foreach (var category in categoriesList)
+            {
+                <div class="col-sm-2">
+                    <a href="/Product/GetProductByCategory/@category.Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@category.Name</a>
+                </div>
+            }
+        }
+    </div>
+</div>
