--- a/OnlineStoreMVC/Views/Shared/_ListSubCategory.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_ListSubCategory.cshtml
@@ -9,15 +9,18 @@
     var numberOfPanel = numberOfSubCatefories / 4 + 1;
 }
 
-@for (int i = 0; i < numberOfPanel; i++)
-{
-    <div class="col-sm-3">
-        <ul class="multi-column-dropdown">
-            @for (int j = i * 4; j < (i+1) * 4 && j < numberOfSubCatefories; j++)
-            {
-                <li><a href="/Product/GetProductByCategory/@Model[j].Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@Model[j].Name</a></li>
-            }
-        </ul>
-    </div>
-}
+<div class="row">
+    @for (int i = 0; i < numberOfPanel; i++)
+    {
+        <div class="col-sm-3">
+            <ul class="multi-column-dropdown">
+                @for (int j = i * 4; j < (i + 1) * 4 && j < numberOfSubCatefories; j++)
+                {
+                    <li><a href="/Product/GetProductByCategory/@Model[j].Id"><i class="fa fa-angle-right" aria-hidden="true"></i>@Model[j].Name</a></li>
+                }
+            </ul>
+        </div>
+    }
 
+    <div class="clearfix"></div>
+</div>
